--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "prelude-ts": "^0.8.2",
-    "react": "^16.6.3",
+    "react": "^16.7.0-alpha.2",
     "react-container-dimensions": "^1.4.1",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-highlight-words": "^0.15.1",
     "react-image": "^1.5.1",
     "react-loadable": "^5.5.0",
     "react-moment": "^0.8.4",
@@ -64,11 +65,11 @@
   "devDependencies": {
     "@babel/core": "^7.1.5",
     "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@types/bluebird": "^3.5.25",
@@ -79,6 +80,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "16.7.6",
     "@types/react-dom": "^16.0.3",
+    "@types/react-highlight-words": "^0.12.0",
     "@types/react-loadable": "^5.4.2",
     "@types/react-redux": "^6.0.11",
     "@types/react-router-redux": "^5.0.17",
@@ -88,7 +90,7 @@
     "@types/webpack": "^3.8.3",
     "@types/webpack-env": "^1.13.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "cross-env": "^5.1.3",
     "electron": "^4.0.0",
     "electron-builder": "20.36.1",
@@ -113,7 +115,7 @@
     "react-hot-loader": "^4.6.3",
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
-    "source-map-loader": "^0.2.3",
+    "source-map-loader": "^0.2.4",
     "ts-jest": "^22.0.4",
     "ts-loader": "^5.3.0",
     "tslint": "^5.9.1",
