- before rem2px conversion

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.3",
+    "codemirror": "^5.42.2",
     "dexie": "^2.0.4",
     "dexie-observable": "^1.0.0-beta.5",
     "electron-context-menu": "^0.10.1",
@@ -23,19 +24,23 @@
     "electron-devtools-installer": "^2.2.4",
     "electron-updater": "^4.0.4",
     "electron-window-state": "^5.0.2",
+    "highlight.js": "^9.13.1",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "jss": "^9.8.7",
     "lodash": "^4.17.4",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
+    "muya": "^0.1.2",
     "prelude-ts": "^0.8.2",
+    "prism": "^4.1.2",
     "react": "^16.7.0-alpha.2",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.7.0-alpha.2",
     "react-highlight-words": "^0.15.1",
     "react-image": "^1.5.1",
     "react-loadable": "^5.5.0",
+    "react-markdown": "^4.0.6",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
