--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@material-ui/icons": "^3.0.1",
     "@material-ui/styles": "^3.0.0-alpha.4",
     "@material-ui/utils": "^3.0.0-alpha.1",
+    "@octokit/plugin-retry": "^2.1.1",
+    "@octokit/plugin-throttling": "^2.3.0",
     "@octokit/rest": "^16.3.0",
     "async-file": "^2.0.2",
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.3",
+    "classnames": "^2.2.6",
     "codemirror": "^5.42.2",
     "dexie": "^2.0.4",
     "dexie-observable": "^1.0.0-beta.5",
@@ -34,10 +37,12 @@
     "muya": "^0.1.2",
     "prelude-ts": "^0.8.2",
     "prism": "^4.1.2",
-    "react": "^16.7.0-alpha.2",
+    "react": "^16.8.0-alpha.0",
     "react-container-dimensions": "^1.4.1",
-    "react-dom": "^16.7.0-alpha.2",
+    "react-dom": "^16.8.0-alpha.0",
+    "react-event-listener": "^0.6.5",
     "react-highlight-words": "^0.15.1",
+    "react-hover-observer": "^2.1.1",
     "react-image": "^1.5.1",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.6",
@@ -57,6 +62,7 @@
     "shelljs": "^0.8.1",
     "short-id": "0.1.0-1",
     "source-map-support": "^0.5.3",
+    "stacktrace-js": "^2.0.0",
     "sugar": "^2.0.6",
     "tinycolor2": "^1.4.1",
     "type-enum-events": "^1.0.5",
@@ -68,16 +74,20 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/plugin-transform-typescript": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@storybook/react": "^4.1.11",
     "@types/bluebird": "^3.5.25",
+    "@types/classnames": "^2.2.7",
     "@types/geojson": "^7946.0.4",
     "@types/jest": "^22.1.2",
     "@types/jss": "^9.5.7",
@@ -85,6 +95,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "16.7.6",
     "@types/react-dom": "^16.0.3",
+    "@types/react-event-listener": "^0.4.7",
     "@types/react-highlight-words": "^0.12.0",
     "@types/react-loadable": "^5.4.2",
     "@types/react-redux": "^6.0.11",
@@ -92,12 +103,14 @@
     "@types/react-select": "^2.0.10",
     "@types/react-virtualized": "^9.18.11",
     "@types/shelljs": "^0.7.8",
+    "@types/stacktrace-js": "0.0.32",
+    "@types/tinycolor2": "^1.4.1",
     "@types/webpack": "^3.8.3",
     "@types/webpack-env": "^1.13.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "cross-env": "^5.1.3",
-    "electron": "^4.0.0",
+    "electron": "^4.0.2",
     "electron-builder": "20.36.1",
     "electron-react-devtools": "^0.5.3",
     "electron-webpack": "^2.6.1",
@@ -111,7 +124,7 @@
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-typescript": "0.12.0",
     "eslint-watch": "4.0.2",
-    "fork-ts-checker-webpack-plugin": "^0.4.15",
+    "fork-ts-checker-webpack-plugin": "^0.5.2",
     "glob": "^7.1.3",
     "jest": "^22.1.4",
     "jest-localstorage-mock": "^2.2.0",
@@ -122,7 +135,7 @@
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.4",
     "ts-jest": "^22.0.4",
-    "ts-loader": "^5.3.0",
+    "ts-loader": "^5.3.3",
     "tslint": "^5.9.1",
     "tslint-react": "^3.4.0",
     "typescript": "^3.1.6",
@@ -133,7 +146,8 @@
   },
   "scripts": {
     "dev": "electron-webpack dev",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "electronWebpack": {
     "main": {
