very nearly ready

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "baseUrl": "./src",
     "outDir": "./dist/out",
     "paths": {
+      "common/*": [ "./common/*" ],
+      "renderer/*": [ "./renderer/*" ],
+      "main/*": [ "./main/*" ],
       "*": [
         "*"
       ]
