--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "private": true,
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "@babel/runtime": "^7.1.5",
     "@githubprimer/octicons-react": "^8.2.0",
     "@hot-loader/react-dom": "^16.7.0",
     "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
-    "@material-ui/styles": "^3.0.0-alpha.4",
-    "@material-ui/utils": "^3.0.0-alpha.1",
-    "@octokit/plugin-retry": "^2.1.1",
-    "@octokit/plugin-throttling": "^2.3.0",
-    "@octokit/rest": "^16.3.0",
+    "@material-ui/styles": "3.0.0-alpha.4",
+    "@material-ui/utils": "3.0.0-alpha.1",
+    "@octokit/plugin-retry": "2.1.1",
+    "@octokit/plugin-throttling": "2.3.0",
+    "@octokit/rest": "16.3.0",
     "async-file": "^2.0.2",
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
@@ -37,11 +36,12 @@
     "muya": "^0.1.2",
     "prelude-ts": "^0.8.2",
     "prism": "^4.1.2",
-    "react": "^16.8.0-alpha.0",
+    "react": "16.7.0-alpha.2",
     "react-container-dimensions": "^1.4.1",
-    "react-dom": "^16.8.0-alpha.0",
+    "react-dom": "16.7.0-alpha.2",
     "react-event-listener": "^0.6.5",
     "react-highlight-words": "^0.15.1",
+    "react-hot-loader": "^4.6.3",
     "react-hover-observer": "^2.1.1",
     "react-image": "^1.5.1",
     "react-loadable": "^5.5.0",
@@ -85,7 +85,6 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
-    "@storybook/react": "^4.1.11",
     "@types/bluebird": "^3.5.25",
     "@types/classnames": "^2.2.7",
     "@types/geojson": "^7946.0.4",
@@ -93,15 +92,10 @@
     "@types/jss": "^9.5.7",
     "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.18",
-    "@types/react": "16.7.6",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-event-listener": "^0.4.7",
-    "@types/react-highlight-words": "^0.12.0",
-    "@types/react-loadable": "^5.4.2",
-    "@types/react-redux": "^6.0.11",
-    "@types/react-router-redux": "^5.0.17",
-    "@types/react-select": "^2.0.10",
-    "@types/react-virtualized": "^9.18.11",
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "@types/react-select": "^2.0.11",
+    "@types/react-transition-group": "2.0.15",
     "@types/shelljs": "^0.7.8",
     "@types/stacktrace-js": "0.0.32",
     "@types/tinycolor2": "^1.4.1",
@@ -110,11 +104,12 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "cross-env": "^5.1.3",
+    "css-hot-loader": "^1.4.3",
+    "css-loader": "^2.1.0",
     "electron": "^4.0.2",
     "electron-builder": "20.36.1",
     "electron-react-devtools": "^0.5.3",
-    "electron-webpack": "^2.6.1",
-    "electron-webpack-ts": "^2.0.2",
+    "electron-webpack": "file:///projects/oss/electron-webpack/packages/electron-webpack/electron-webpack-2.6.1.tgz",
     "eslint": "5.2.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-friendly-formatter": "4.0.1",
@@ -124,15 +119,16 @@
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-typescript": "0.12.0",
     "eslint-watch": "4.0.2",
+    "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "glob": "^7.1.3",
+    "html-loader": "^0.5.5",
     "jest": "^22.1.4",
     "jest-localstorage-mock": "^2.2.0",
     "node-sass": "^4.9.3",
     "raw-loader": "^1.0.0",
-    "react-hot-loader": "^4.6.3",
     "react-test-renderer": "^16.2.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.4",
     "ts-jest": "^22.0.4",
     "ts-loader": "^5.3.3",
@@ -140,13 +136,19 @@
     "tslint-react": "^3.4.0",
     "typescript": "^3.1.6",
     "typescript-eslint-parser": "^21.0.2",
-    "webpack": "4.16.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.6.0"
   },
   "scripts": {
     "dev": "electron-webpack dev",
-    "build": "node scripts/build.js",
+    "compile": "cross-env NODE_ENV=development SKIP_TS=1 electron-webpack",
+    "build": "npm run compile && electron-builder -c.compression=store \"-c.mac.identity=Densebrain, Inc\"",
+    "build:nosign": "npm run compile && electron-builder -c.compression=store -c.mac.identity=null",
+    "build:dir": "npm run compile && electron-builder --dir -c.compression=store -c.mac.identity=null",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "electronWebpack": {
