- finally remembered to push

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/pro-light-svg-icons": "^5.7.1",
+    "@fortawesome/pro-solid-svg-icons": "^5.7.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@githubprimer/octicons-react": "^8.2.0",
     "@hot-loader/react-dom": "^16.7.0",
     "@material-ui/core": "^3.7.1",
@@ -85,6 +89,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@fortawesome/fontawesome-pro": "^5.7.1",
     "@types/bluebird": "^3.5.25",
     "@types/classnames": "^2.2.7",
     "@types/geojson": "^7946.0.4",
@@ -109,8 +114,8 @@
     "electron": "^4.0.2",
     "electron-builder": "20.36.1",
     "electron-react-devtools": "^0.5.3",
-    "electron-webpack": "file:///projects/oss/electron-webpack/packages/electron-webpack/electron-webpack-2.6.1.tgz",
-    "eslint": "5.2.0",
+    "electron-webpack": "./lib/electron-webpack-2.6.1.tgz",
+    "eslint": "^5.13.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "2.1.0",
